--- a/laba5_wpff.csproj
+++ b/laba5_wpff.csproj
@@ -128,6 +128,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="rps1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\rps1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
