--- a/laba5_wpff.csproj
+++ b/laba5_wpff.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Xaml.Behaviors.Wpf.1.1.77\lib\net462\Microsoft.Xaml.Behaviors.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -58,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\GTNmodel.cs" />
     <Compile Include="Model\RPCmodel.cs" />
     <Compile Include="ViewModel\ClickerViewModel.cs" />
     <Compile Include="ViewModel\GuessNumberViewModel.cs" />
@@ -133,6 +137,18 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="View\rps1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="gamee1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\gamee1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="quesswho1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\quesswhoo1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
